# warp-cn

./: Cargo.toml  README.md  README_zh.md
.cargo/: config.toml
.github/workflows/: build-mac-app.yml  build-windows-app.yml  publish-rerere.yml  upstream-sync.yml
app/: Cargo.toml  build.rs
app/src/: app_menus.rs  input_suggestions.rs  language_settings.rs  lib.rs  menu.rs  root_view.rs  tab.rs
app/src/ai/: ai_document_view.rs  auggie_mcp.rs  auggie_store_client.rs  codebase_index_backend.rs  conversation_details_panel.rs  llms.rs  mod.rs  persisted_workspace.rs
app/src/ai_assistant/: mod.rs  requests.rs
app/src/auth/: login_slide.rs
app/src/autoupdate/: changelog.rs  mod.rs
app/src/chip_configurator/: modal_shell.rs
app/src/code/: local_code_editor.rs  view.rs
app/src/code_review/: code_review_view.rs  comment_list_view.rs  comment_rendering.rs  mod.rs
app/src/context_chips/: display_chip.rs
app/src/drive/: index.rs
app/src/github_update/: auto_check.rs  install.rs  mod.rs
app/src/notebooks/: notebook.rs
app/src/pane_group/: mod.rs
app/src/quit_warning/: mod.rs
app/src/resource_center/: keybindings_page.rs  main_page.rs
app/src/search/: data_source.rs
app/src/server/: mod.rs  server_api.rs  sync_queue.rs
app/src/settings_view/: about_page.rs  ai_page.rs  code_page.rs  (+9 more)
crates/warp_index_bridge/: Cargo.toml  README.md
crates/warp_index_bridge/src/: main.rs
crates/warpui/: Cargo.toml
docs/: building-windows-portable.md
script/: generate_update_keys.sh  sync-upstream  update_plist  warp-update.pub
script/macos/: bundle  run
(+113 files in other folders)
